# offline-translator

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  build.sh  catalog_adblock.py  catalog_base.py  catalog_mirror.py  catalog_tts.py  catalog_upstream.py  download_bucket.py  generate.py  generate_index.py  generate_tts_index.py  generate_v2.py  settings.gradle.kts  sign-apk.sh
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/bergamot/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: adblock-cosmetic.js  index.json  index_v2.json  reader-mode.js  translator.js
app/src/main/bindings/: .gitignore  Cargo.toml  build_bindings.sh
app/src/main/bindings/src/: adblock.rs  android_font_provider.rs  bergamot.rs  catalog.rs  lib.rs  speech.rs  tarkka.rs  tesseract.rs  transliterate.rs  uniffi_catalog.rs
app/src/main/java/dev/davidv/translator/: AidlTranslationService.kt  AppSettings.kt  BatchTextTranslator.kt  CatalogBinding.kt  CatalogModels.kt  DocumentTranslationService.kt  DownloadEvent.kt  DownloadService.kt  FileEvent.kt  FilePathManager.kt  FragmentNormalization.kt  Geometry.kt  ImagePainting.kt  ImageProcessor.kt  InputType.kt  Language.kt  LanguageCatalog.kt  LanguageCatalogV2.kt  LanguageDetector.kt  LanguageManager.kt  LanguageStateManager.kt  MainActivity.kt  MucabBinding.kt  OCRService.kt  OverlayTextTranslationHelper.kt  PcmAudioPlayer.kt  ProcessTextActivity.kt  ReadonlyModalOutputAlignment.kt  SettingsManager.kt  SpeechBinding.kt  SpeechService.kt  StyledTextPipeline.kt  TarkkaData.kt  TranslationCoordinator.kt  TranslationRuntime.kt  TranslationService.kt  TranslatorApplication.kt  TranslatorMessage.kt  TransliterateBinding.kt  UniffiTypeAliases.kt
app/src/main/java/dev/davidv/translator/accessibilityOverlay/: OverlayInput.kt  OverlayUI.kt  TranslatorAccessibilityService.kt
app/src/main/java/dev/davidv/translator/adblock/: AdblockManager.kt  RequestTypeMapper.kt
app/src/main/java/dev/davidv/translator/assistantOverlay/: AssistStructureLogger.kt  AssistStructureParser.kt  BorderWaveView.kt  OverlayRenderer.kt  TranslatorVoiceInteractionSession.kt  TranslatorVoiceInteractionSessionService.kt
app/src/main/java/dev/davidv/translator/browser/: AdblockJsBridge.kt  BrowserActivity.kt  BrowserViewModel.kt  TranslatorJsBridge.kt
app/src/main/java/dev/davidv/translator/overlayChrome/: OverlayChromeFactory.kt
app/src/main/java/dev/davidv/translator/ui/: TranslatorViewModel.kt
app/src/main/java/dev/davidv/translator/ui/components/: DetectedLanguageSection.kt  DetectedLanguageToast.kt  DictionaryBottomSheet.kt  ImageCaptureComponent.kt  LanguageDownloadButton.kt  LanguageSelectionRow.kt  LanguageSelector.kt  SpeechSpeedControl.kt  StyledTextField.kt  TranslationField.kt
app/src/main/java/dev/davidv/translator/ui/screens/: LanguageAssetManagerScreen.kt  MainScreen.kt  NoLanguagesScreen.kt  SettingsScreen.kt  TabbedLanguageManagerScreen.kt  TranslatorApp.kt
app/src/main/java/uniffi/bindings/: bindings.kt
app/src/main/java/uniffi/translator/: translator.kt
app/src/main/res/drawable/: attach_file_add.xml  chrome_reader_mode.xml  draft.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/dev/davidv/translator/: StyledTextPipelineTest.kt
catalog_sources/: language_index.json  source_catalog.json
data_sources/: gcs_models.json
fastlane/metadata/android/en-US/: short_description.txt
fastlane/metadata/android/en-US/changelogs/: 132.txt  141.txt  151.txt
translator/: Cargo.toml
translator/src/: bergamot.rs  catalog.rs  catalog_model.rs  catalog_planner.rs  catalog_tests.rs  catalog_wire.rs  language.rs  language_detect.rs  lib.rs  mucab.rs  ocr.rs  routing.rs  speech.rs  styled.rs  tarkka.rs  tesseract.rs  translate.rs  transliterate.rs
