[package]
name = "translator"
version = "0.1.0"
edition = "2024"

[lib]
name = "translator"
path = "src/lib.rs"

[dependencies]
bergamot-sys = { path = "../../../git/bergamot-sys" }
cld2 = { git = "https://github.com/davidVentura/rust-cld2" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
