[package]
name = "translator"
version = "0.1.0"
edition = "2024"

[lib]
name = "translator"
path = "src/lib.rs"

[features]
uniffi = ["dep:uniffi"]

[dependencies]
bergamot-sys = { git = "https://github.com/DavidVentura/bergamot-sys" }
cld2 = { git = "https://github.com/DavidVentura/rust-cld2" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.29", optional = true }
