[package]
name = "bindings"
version = "0.1.0"
edition = "2024"

[features]
default = ["dictionary", "mucab", "tesseract", "tts"]
dictionary = ["translator/dictionary"]
mucab = ["translator/mucab"]
tesseract = ["translator/tesseract"]
tts = ["translator/tts"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "bindings"
path = "src/lib.rs"

[dependencies]
translator = { git = "https://github.com/DavidVentura/translator-rs.git", default-features = false, features = ["uniffi", "transliterate"] }
# translator = { path = "/home/david/git/translator-rs", default-features = false, features = ["uniffi", "transliterate"] }
adblock = { version = "0.12.2", default-features = false, features = ["full-regex-handling", "embedded-domain-resolver"] }
serde_json = "1"
uniffi = "0.29"
thiserror = "2"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[profile.release]
lto = "thin"
codegen-units = 1
debug = false
strip = "debuginfo"
